feats/endpoint-EU